# ragf

./: COMMIT_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  ESCALATION_ANALYSIS_SUMMARY.md  FAILURE_TESTS_INSTRUCTIONS.md  Makefile  README.md  deploy_vps.sh  insert_escalation_sections.py  pyproject.toml  run_analysis.sh
audit/: ledger.py  metrics.py
benchmark/: README.md
benchmark/queries/: run_benchmark.py
docs/: AMM.md  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  VERTICAL_STRUCTURE.md
docs/audit/: EXECUTION_NOTES.md
docs/decisions/: ADR-002-monorepo-vs-split.md
docs/migration/: VERIFICATION_V2.md
gateway/: decision_engine.py  intent_normalizer.py  main.py  neo4j_client.py
gateway/validators/fintech/: aml_validator.py  composite_validator.py  psd2_validator.py
harness_auditor/examples/: README.md  fintech_minimal.yaml  fintech_seeded_faults.yaml
harness_auditor/src/harness_auditor/: cli.py  report.py
harness_auditor/src/harness_auditor/queries/: cc01_verb_groundedness.cypher  cc02_constraint_reachability.cypher  cc03_orphan_regulations.cypher  cc04_supersedes_cycles.cypher  cc05_precedence_collision.cypher  cc06_coverage_map.cypher  cc07_drift_delta.cypher  cc08_authority_gradient.cypher  cc09_fail_closed_defaults.cypher  cc10_hallucinated_verbs.cypher  cc11_constraint_centrality.cypher
harness_auditor/tests/: conftest.py  test_examples.py  test_report.py  test_schemas.py
harness_auditor/tests/fixtures/: fintech_centrality_concentrated.yaml  fintech_minimal_v0_9.yaml  fintech_taxonomy_complete.yaml  fintech_taxonomy_partial.yaml  tiny_ontology.yaml
infra/docker/: README_DEMO.md
papers/: Makefile  RAGF_v2_5.tex  VERSIONING.md
papers/archive/: ESCALATION_ANALYSIS_SECTIONS.tex  RAGF_v2_4.tex
ragf_core/escalation/: resolution_tracker.py
ragf_core/governance/: bias_detector.py
ragf_core/state/: uncertain_state.py
results/escalation_analysis/: aviation_resolution_metrics.json  healthcare_resolution_metrics.json
scripts/: analyze_escalations.py
services/demo-engine/app/: main.py
services/demo-engine/app/demos/: fintech_scenarios.py
shared/: models.py
tests/benchmark/: benchmark_suite.py
tests/integration/: test_failure_modes.py
